# boilerworks-fastapi-htmx

./: .build-complete  .dockerignore  .env.example  .gitignore  AGENTS.md  CALLIOPE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  alembic.ini  bootstrap.md  docker-compose.yml  memory.md  pyproject.toml  run.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py  seed.py
app/middleware/: auth.py  csrf.py
app/models/: __init__.py  base.py  form.py  item.py  product.py  user.py  workflow.py
app/routers/: auth.py  categories.py  dashboard.py  forms.py  health.py  items.py  products.py  workflows.py
app/services/: auth.py  forms.py  workflow.py
migrations/: env.py
migrations/versions/: 001_init.py
templates/: layout.html
templates/components/: flash.html  pagination.html
templates/pages/: dashboard.html
templates/pages/auth/: login.html  register.html
templates/pages/categories/: create.html  edit.html  index.html  show.html
templates/pages/forms/: create.html  edit.html  index.html  show.html  submit.html
templates/pages/items/: _list.html  create.html  edit.html  index.html  show.html
templates/pages/products/: _list.html  create.html  edit.html  index.html  show.html
templates/pages/workflows/: create.html  edit.html  index.html  instances.html  show.html
tests/: conftest.py  test_auth.py  test_categories.py  test_forms.py  test_health.py  test_items.py  test_products.py  test_workflows.py
