[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boilerworks-fastapi-htmx"
version = "0.1.0"
description = "Boilerworks FastAPI + HTMX full-stack template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1.0",
    "redis>=5.0.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.5.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
